--- a/styles.css
+++ b/styles.css
@@ -549,7 +549,7 @@ body {
 }
 
 .services {
-  padding: 61px 0 0;
+  padding: 61px 0 130px;
   background: url(image/roadPicture.png) no-repeat 0 175px;
   text-align: center;
 }
@@ -671,4 +671,106 @@ body {
   background-color: #ac378e;
   left: 36.6%;
   top: 91px;
+}
+
+#footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 142px 0 209px;
+}
+
+#footer .logo {
+  margin: 0 0 54px;
+}
+
+#footer .nav-block {
+  display: flex;
+  list-style: none;
+  margin: -2px 13px 56px 0;
+  column-gap: 33px;
+  position: relative;
+}
+
+#footer .nav-block::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 500px;
+  height: 1px;
+  top: 6px;
+  left: -547px;
+  background-image: linear-gradient(to right, #d5536f, #5d00c9);
+}
+
+#footer .nav-block::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 500px;
+  height: 1px;
+  top: 6px;
+  left: 593px;
+  background-image: linear-gradient(to right, #5d00c9, #d5536f);
+}
+
+#footer .nav-block li {
+  font-size: 14px;
+  line-height: 14px;
+  letter-spacing: 2px;
+  font-family: "Lato-Regular";
+  color: #6c7276;
+}
+
+#footer .nav-block a {
+  text-decoration: none;
+  color: #6c7276;
+  margin: 0 25px 0 0;
+}
+
+#footer .nav-block .active {
+  color: #a53689;
+}
+
+#footer .social-networks {
+  list-style: none;
+  display: flex;
+  margin: 0 36px 0 0;
+  justify-content: center;
+  column-gap: 47px;
+}
+
+#footer .social-networks a {
+  background: url(image/socialMediaFooter.png) no-repeat;
+  display: block;
+  text-indent: -9999px;
+  width: 20px;
+  height: 20px;
+}
+
+#footer .social-networks .twitter {
+  position: relative;
+}
+
+#footer .social-networks .twitter::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -12px;
+  right: -16px;
+  width: 25px;
+  background: url(image/ellipse.png);
+  height: 50px;
+}
+
+#footer .social-networks .instagram {
+  background-position: -68px 0px;
+}
+
+#footer .social-networks .facebook {
+  background-position: -135px 0px;
+}
+
+#footer .social-networks .behance {
+  background-position: -202px 0px;
 }
