--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@
 body {
   background-color: #111619;
   min-width: 1900px;
+  font: 16px/24px PlayfairDisplay-Regular, sans-serif;
 }
 
 .content {
@@ -52,6 +53,7 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 0 0 29px;
+  flex: 0 0 auto;
 }
 
 .logo-and-contacts {
@@ -61,9 +63,8 @@ body {
 }
 
 #header .contact-number {
-  font-size: 18px;
+  font: 18px/16px serif;
   letter-spacing: 2px;
-  line-height: 16px;
   color: #6b7175;
   margin: 0 0 0 11px;
 }
@@ -80,6 +81,10 @@ body {
   padding: 0;
 }
 
+#header .nav-block .active {
+  color: #a53689;
+}
+
 #header .nav-block a {
   color: #53595c;
   letter-spacing: 2.5px;
@@ -88,7 +93,7 @@ body {
 }
 
 #header .nav-block a:hover {
-  text-decoration: underline;
+  color: #a53689;
 }
 
 #header .social-networks {
@@ -172,7 +177,6 @@ body {
   line-height: 28px;
   letter-spacing: 45px;
   color: #48555d;
-  font-family: PlayfairDisplay-Regular, serif;
 }
 
 .button-gallery {
@@ -209,7 +213,7 @@ body {
 .images {
   list-style: none;
   display: flex;
-  margin: 0 0 35px;
+  margin: 0 0 32px;
   padding: 0;
 }
 
@@ -254,7 +258,6 @@ body {
   line-height: 100px;
   color: #fff;
   width: 1550px;
-  font-family: PlayfairDisplay-Regular, serif;
 }
 
 .player {
@@ -296,7 +299,6 @@ body {
   font-size: 44px;
   line-height: 70px;
   color: #fff;
-  font-family: PlayfairDisplay-Regular, serif;
 }
 
 .strategy mark,
@@ -305,7 +307,6 @@ body {
   line-height: 70px;
   color: #22292d;
   background: none;
-  font-family: PlayfairDisplay-Regular, serif;
 } 
 
 .strategy article {
@@ -317,25 +318,20 @@ body {
   color: #fff;
   font-size: 44px;
   line-height: 58px;
-  font-family: PlayfairDisplay-Regular, serif;
 }
 
 .strategy p,
 .company-offer p {
   margin: 0 0 38px;
   width: 630px;
-  font-size: 22px;
-  line-height: 34px;
+  font: 22px/34px Lato-Light, sans-serif;
   color: #fff;
-  font-family: Lato-Light, sans-serif;
 }
 
 .strategy a ,
 .company-offer a {
   background-image: linear-gradient(to right, #e84b37, #ee7d16);
-  font-size: 14px;
-  line-height: 32px;
-  font-family: Proxima-Nova-Extrabold, serif;
+  font: 14px/32px Proxima-Nova-Extrabold, serif;
   color: #fff;
   text-decoration: none;
   padding: 11px 19px;
@@ -352,7 +348,7 @@ body {
 }
 
 .company-offer {
-  padding: 172px 0 130px;
+  padding: 172px 0 127px;
 }
 
 .company-offer .content {
@@ -395,12 +391,10 @@ body {
 }
 
 .portfolio h1 {
-  font-size: 18px;
-  line-height: 50px;
+  font: 18px/50px PlayfairDisplay-Bold, serif;
   color: #fff;
   margin: 0 0 101px 10px;
   letter-spacing: 11px;
-  font-family: PlayfairDisplay-Bold, serif;
   position: relative;
 }
 
@@ -443,24 +437,18 @@ body {
 
 .portfolio h2 {
   margin: 0;
-  font-size: 30px;
-  line-height: 32px;
+  font: 30px/32px Proxima-Nova-Semibold, sans-serif;
   color: #000;
-  font-family: Proxima-Nova-Semibold, sans-serif;
 }
 
 .portfolio span {
-  font-size: 16px;
-  line-height: 24px;
   color: #000;
   font-family: Proxima-Nova-Regular, sans-serif;
 }
 
 .portfolio a {
   background-image: linear-gradient(to right, #e84b37, #ee7d16);
-  font-size: 14px;
-  line-height: 32px;
-  font-family: Proxima-Nova-Extrabold, serif;
+  font: 14px/32px Proxima-Nova-Extrabold, serif;
   color: #fff;
   text-decoration: none;
   padding: 11px 19px;
@@ -562,18 +550,15 @@ body {
 }
 
 .services strong {
-  font-size: 14px;
+  font: 14px/50px PlayfairDisplay-Bold, sans-serif;
   color: #ac378e;
-  line-height: 50px;
   letter-spacing: 8px;
   margin: 0 0 -3px;
-  font-family: PlayfairDisplay-Bold, sans-serif;
 }
 
 .services h1 {
   font-size: 70px;
   line-height: 95.67px;
-  font-family: PlayfairDisplay-Regular, sans-serif;
   color: #fff;
   margin: 0 0 16px;
 }
@@ -587,13 +572,11 @@ body {
 .services a {
   text-decoration: none;
   color: #fff;
-  font-size: 14px;
-  line-height: 32px;
+  font: 14px/32px Proxima-Nova-Extrabold, sans-serif;
   background-image: linear-gradient(to right, #5d00c9, #d5536f);
   padding: 10px 22px;
   letter-spacing: 3px;
   border-radius: 2px;
-  font-family: Proxima-Nova-Extrabold, sans-serif;
 }
 
 .services .list-of-services {
@@ -622,19 +605,15 @@ body {
 }
 
 .services h2 {
-  font-size: 30px;
-  line-height: 50px;
+  font: 30px/50px Lato-Regular, sans-serif;
   color: #fff;
   margin: 0 0 15px;
-  font-family: Lato-Regular, sans-serif;
 }
 
 .services p {
+  font: 18px/32px Lato-Light, sans-serif;
   margin: 0;
-  font-size: 18px;
-  line-height: 32px;
   color: #fff;
-  font-family: Lato-Light, sans-serif;
 }
 
 .services .nav-gallery {
@@ -654,7 +633,6 @@ body {
   line-height: 95.67px;
   color: #fff;
   margin: -4px 0 0 20px;
-  font-family: PlayfairDisplay-Regular, sans-serif;
 }
 
 .services .contact address {
@@ -715,10 +693,8 @@ body {
 }
 
 #footer .nav-block li {
-  font-size: 14px;
-  line-height: 14px;
+  font: 14px/14px Lato-Regular, sans-serif;
   letter-spacing: 2px;
-  font-family: "Lato-Regular";
   color: #6c7276;
 }
 
@@ -726,6 +702,10 @@ body {
   text-decoration: none;
   color: #6c7276;
   margin: 0 25px 0 0;
+}
+
+#footer .nav-block a:hover {
+  color: #a53689;
 }
 
 #footer .nav-block .active {
