--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,8 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   background-color: #111619;
   min-width: 1900px;
   font: 16px/24px PlayfairDisplay-Regular, sans-serif;
@@ -54,6 +56,11 @@ body {
   justify-content: space-between;
   padding: 0 0 29px;
   flex: 0 0 auto;
+  width: 100%;
+}
+
+main {
+  flex: 1 0 auto;
 }
 
 .logo-and-contacts {
@@ -703,6 +710,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 146px 0 209px;
+  flex: 0 0 auto;
 }
 
 #footer .logo {
